fix content bug by adding overflow:hidden;

--- a/Main/src/sass/_content.scss
+++ b/Main/src/sass/_content.scss
@@ -11,8 +11,42 @@
         color:#000;
     }
     .hope_article_content{
+        position:relative;
+        overflow:hidden;
+        p{
+            word-wrap:break-word;
+            word-break:break-all;
+        }
         img{
             max-width:100%!important;
         }
+    }
+}
+.main_content_fixed{
+    position:fixed;
+    left:50%;
+    width:0;
+    top:0;
+    bottom:0;
+}
+.main_content_fixed_left,.main_content_fixed_right{
+    position:absolute;
+    top:110px;
+    bottom:10px;
+    max-width:180px;
+    overflow:hidden;
+}
+.main_content_fixed_right{
+    left:500px;
+}
+.main_content_fixed_left{
+    left:-670px;
+}
+@media (max-width:1340px){
+    .main_content_fixed{display:none;}
+}
+@media (min-width:1380px){
+    .main_content_fixed_left,.main_content_fixed_right{
+        max-width:200px;
     }
 }
