--- a/Main/src/sass/mixin/_general.scss
+++ b/Main/src/sass/mixin/_general.scss
@@ -15,8 +15,8 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
-  word-wrap:break-word;
-  word-break:break-all;
+  //word-wrap:break-word;
+  // word-break:break-all;
 }
 
 // #opacity
